# fontadhd

./: README.md  fontadhd.py  fontadhd.spec  gui.py  organize_fonts.py  pyproject.toml
tests/: conftest.py  test_clean.py  test_cli.py  test_consolidate.py  test_flatten.py  test_gui_api.py  test_normalize.py  test_prune.py  test_rename.py
web/: index.html  style.css
